--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   provider: ^3.1.0
   image_picker: ^0.6.0
   image_crop: ^0.2.1
+  flutter_html: ^0.11.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
