--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,10 @@ dependencies:
   font_awesome_flutter: ^8.5.0
   smooth_star_rating: ^1.0.3
   intl: ^0.16.0
-  cached_network_image: ^1.1.1
+  cached_network_image: ^2.1.0+1
   shared_preferences: ^0.4.3
   provider: ^3.1.0
   image_picker: ^0.6.0
-  image_crop: ^0.2.1
   flutter_html: ^0.11.0
 dev_dependencies:
   flutter_test:
