--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   provider: ^3.1.0
   image_picker: ^0.6.0
   flutter_html: ^0.11.0
+  fluttertoast: ^4.0.0
+  city_pickers: ^0.1.30
 dev_dependencies:
   flutter_test:
     sdk: flutter
