--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_html: ^0.11.0
   fluttertoast: ^4.0.0
   city_pickers: ^0.1.30
+  flutter_easyrefresh: ^2.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
